setting up the server

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,9 @@ services:
       - 3000:3000
     networks:
       - app_network
+    volumes:
+      - ./apps/web:/app  # Adjust this path based on your project structure
+
   api:
     container_name: api
     build:
@@ -19,9 +22,9 @@ services:
       - 3001:3001
     networks:
       - app_network
+    volumes:
+      - ./apps/api:/app  # Adjust this path based on your project structure
 
-# Define a network, which allows containers to communicate
-# with each other, by using their container name as a hostname
 networks:
   app_network:
     external: true
