--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,10 +14,15 @@
     "preset": "@repo/jest-presets/node"
   },
   "dependencies": {
+    "@apollo/server": "^4.11.0",
+    "@prisma/client": "^5.21.1",
     "@repo/logger": "*",
+    "axios": "^1.7.7",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.3",
+    "graphql": "^16.9.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
@@ -28,6 +33,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.24",
     "@types/supertest": "^6.0.2",
@@ -36,6 +42,7 @@
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
+    "prisma": "^5.21.1",
     "supertest": "^6.3.3",
     "typescript": "^5.3.3"
   }
