--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@apollo/server": "^4.11.0",
+    "@aws-sdk/client-s3": "^3.693.0",
+    "@aws-sdk/s3-request-presigner": "^3.693.0",
     "@prisma/client": "^5.21.1",
     "@repo/logger": "*",
     "axios": "^1.7.7",
